--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -18,7 +18,9 @@
       "touchSwipe": "Deslizar con dos dedos",
       "touchPinch": "Acercar con pellizco",
       "vsync": "VSync",
-      "customFontsInfo": "Coloque fuentes personalizadas (.ttf/.otf) en /assets/fonts/"
+      "customFontsInfo": "Coloque fuentes personalizadas (.ttf/.otf) en /assets/fonts/",
+      "systemUi": "Interfaz del sistema",
+      "custom": "Personalizado..."
     },
     "accessibility": {
       "highContrast": "Alto contraste",
@@ -36,13 +38,36 @@
       "dnd": "No molestar"
     },
     "updates": {
-      "autoUpdate": "Actualización automática"
+      "autoUpdate": "Actualización automática",
+      "checkNow": "Buscar ahora"
     },
     "language": {
       "language": "Idioma",
       "keymap": "Distribución",
       "dateFormat": "Formato de fecha",
-      "timeZone": "Zona horaria"
+      "timeZone": "Zona horaria",
+      "qwerty": "QWERTY",
+      "colemak": "Colemak",
+      "dvorak": "Dvorak",
+      "mmddyyyy": "MM/DD/YYYY",
+      "ddmmyyyy": "DD/MM/YYYY",
+      "yyyymmdd": "YYYY-MM-DD"
+    },
+    "nexa": {
+      "selectModel": "Seleccionar modelo",
+      "testingModel": "Probando modelo...",
+      "testSuccessful": "Prueba exitosa:",
+      "testFailed": "Prueba fallida:",
+      "currentModel": "Modelo actual:",
+      "gpuWorkers": "Trabajadores de GPU",
+      "usageDashboard": "Panel de uso",
+      "totalCalls": "Llamadas totales:",
+      "totalTokens": "Tokens totales:",
+      "lastLatency": "Última latencia:",
+      "estimatedCost": "Costo estimado:"
+    },
+    "about": {
+      "text": "NyxOS es un sistema operativo rápido y ligero que se ejecuta localmente en tu navegador."
     }
   }
 }
