--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -18,7 +18,9 @@
       "touchSwipe": "Glisser à deux doigts",
       "touchPinch": "Zoom par pincement",
       "vsync": "VSync",
-      "customFontsInfo": "Placez des polices personnalisées (.ttf/.otf) dans /assets/fonts/"
+      "customFontsInfo": "Placez des polices personnalisées (.ttf/.otf) dans /assets/fonts/",
+      "systemUi": "Interface système",
+      "custom": "Personnalisé..."
     },
     "accessibility": {
       "highContrast": "Contraste élevé",
@@ -36,13 +38,36 @@
       "dnd": "Ne pas déranger"
     },
     "updates": {
-      "autoUpdate": "Mise à jour automatique"
+      "autoUpdate": "Mise à jour automatique",
+      "checkNow": "Vérifier maintenant"
     },
     "language": {
       "language": "Langue",
       "keymap": "Configuration du clavier",
       "dateFormat": "Format de date",
-      "timeZone": "Fuseau horaire"
+      "timeZone": "Fuseau horaire",
+      "qwerty": "QWERTY",
+      "colemak": "Colemak",
+      "dvorak": "Dvorak",
+      "mmddyyyy": "MM/DD/YYYY",
+      "ddmmyyyy": "DD/MM/YYYY",
+      "yyyymmdd": "YYYY-MM-DD"
+    },
+    "nexa": {
+      "selectModel": "Sélectionner le modèle",
+      "testingModel": "Test du modèle...",
+      "testSuccessful": "Test réussi :",
+      "testFailed": "Échec du test :",
+      "currentModel": "Modèle actuel :",
+      "gpuWorkers": "Workers GPU",
+      "usageDashboard": "Tableau de bord d'utilisation",
+      "totalCalls": "Nombre total d'appels :",
+      "totalTokens": "Nombre total de jetons :",
+      "lastLatency": "Dernière latence :",
+      "estimatedCost": "Coût estimé :"
+    },
+    "about": {
+      "text": "NyxOS est un système d'exploitation rapide et léger fonctionnant localement dans votre navigateur."
     }
   }
 }
