--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -69,5 +69,15 @@
     "about": {
       "text": "NyxOS — швидка, легка операційна система, що працює локально у вашому браузері."
     }
+  },
+  "aiAssistant": {
+    "greeting": "Nexa: Привіт! Я Nexa, твій асистент. Як я можу допомогти тобі сьогодні?",
+    "placeholder": "Запитай мене про що завгодно...",
+    "send": "Відправити",
+    "research": "Дослідити",
+    "you": "Ти",
+    "nexa": "Nexa",
+    "nexaThinking": "Nexa (Думає)",
+    "error": "Вибач, щось пішло не так."
   }
 }
